workaround uudelle angularjs-kirjastolle. ng-class ei toimi.

--- a/src/main/webapp/html/valintaryhmatlistaus.html
+++ b/src/main/webapp/html/valintaryhmatlistaus.html
@@ -13,12 +13,12 @@
 	<a href="#/valintaryhma/{{data.oid}}"> {{data.nimi}}</a>
 </div>
 <ol data-valintaryhmaoid="{{data.oid}}">
-	<li ng-repeat="data in domain.getLapset(data) | orderBy:predicate" data-oid="{{data.oid}}" ng-class="{noNesting: domain.isHakukohde(data), uiExpanded: domain.isExpanded(data), uiCollapsed: domain.isCollapsed(data)}" ng-include="domain.getTemplate(data)"></li>
+	<li ng-repeat="data in domain.getLapset(data) | orderBy:predicate" data-oid="{{data.oid}}" class="{{addClass('noNesting',domain.isHakukohde(data))}} {{addClass('uiExpanded',domain.isExpanded(data))}} {{addClass('uiCollapsed',domain.isCollapsed(data))}}" ng-include="domain.getTemplate(data)"></li>
 </ol>
 </script>
 <script type="text/ng-template" id="hakukohde_leaf.html">
-<span class="icon hakukohde file ng-scope">​</span>
-<div class="label ng-scope"><a href="#/hakukohde/{{data.oid}}"> {{data.nimi}}</a></div>
+<span class="icon hakukohde file">​</span>
+<div class="label"><a href="#/hakukohde/{{data.oid}}"> {{data.nimi}}</a></div>
 </script>
 
 
@@ -38,6 +38,8 @@
     <a href="#/lisaaHakukohde" class="button small">{{'valintaryhmatlistaus.add.hakukohde' | i18n}}</a>
 
     <ol class="sortable treelist collapsible multiselect" ng-controller="ValintaryhmaHakukohdeTreeController" nestedsortable="">
-	    <li ng-repeat="data in domain.getRootNode() | orderBy:predicate" data-oid="{{data.oid}}" ng-class="{noNesting: domain.isHakukohde(data), uiExpanded: data.isVisible, uiCollapsed: !data.isVisible}" ng-include="domain.getTemplate(data)"></li>
+	    <li ng-repeat="data in domain.getRootNode() | orderBy:predicate" data-oid="{{data.oid}}" ng-model="data" 
+	    	class="{{addClass('noNesting',domain.isHakukohde(data))}} {{addClass('uiExpanded',domain.isExpanded(data))}} {{addClass('uiCollapsed',domain.isCollapsed(data))}}" 
+	    	ng-include="domain.getTemplate(data)"></li>
     </ol>
 </div>
