Selectin datât nimen mukaan järjestykseen.

--- a/src/main/webapp/html/import.html
+++ b/src/main/webapp/html/import.html
@@ -8,7 +8,7 @@
     <h2>Synkronoi tarjonta</h2>
 
     <div>
-        <select ng-model="model.hakuOid" ng-options="haku.nimi.kieli_fi for haku in model.haut"></select>
+        <select ng-model="model.hakuOid" ng-options="haku.nimi.kieli_fi for haku in model.haut | orderBy:'nimi.kieli_fi'"></select>
         <a ng-click="aktivoi()" class="button small">Synkronoi tarjonta</a>
     </div>
 
