--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript"  src="../configuration/configuration.js"></script>
 
     <!-- app js-->
+
     <script type="text/javascript" src="../js/valintaperusteet.js"></script>
     <script type="text/javascript" src="../js/valintaryhmaHakukohdeTree.js"></script>
     <script type="text/javascript" src="../js/valintaryhma.js"></script>
@@ -30,6 +31,7 @@
     <script type="text/javascript" src="../js/valintatapajono.js"></script>
     <script type="text/javascript" src="../js/jarjestyskriteeri.js"></script>
     <script type="text/javascript" src="../js/directives.js"></script>
+    <script type="text/javascript" src="../js/haku.js"></script>
     <script type="text/javascript" src="../js/filters.js"></script>
     
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavadomain.js"></script>
