--- a/src/main/webapp/html/valintaryhmatlistaus.html
+++ b/src/main/webapp/html/valintaryhmatlistaus.html
@@ -1,21 +1,36 @@
 <script type="text/ng-template" id="valintaryhma_node.html">
     <div class="state-disabled label">
-	<span class="disclose icon valintaryhma folder"
+	    <span class="disclose icon valintaryhma folder"
           ng-class="{ collapse: domain.isCollapsed(data), file: domain.isFile(data), open: domain.isExpanded(data)}"
-          ng-click="expandNode(data)">​</span>
-	<span enter="hover" leave="hover" class="dropmenu">
-	<ul class="dropmenu-list">
+          ng-click="expandNode(data)">
+         ​</span>
+	    <!--
+        <span enter="hover" leave="hover" class="dropmenu">
+
+       <ul class="dropmenu-list">
         <div class="state-disabled"><a href="#/valintaryhma/{{data.oid}}/lisaaSisaltyvaValintaryhma">Lisää sisältyvä
             valintaryhmä</a></div>
         <div class="state-disabled"><a href="#/valintaryhma/{{data.oid}}/sisaltyvat"> liitä hakukohde</a></div>
     </ul>
-	</span>
-        <a href="#/valintaryhma/{{data.oid}}"> {{data.nimi}}</a>
+
+    </span>
+    -->
+         <a href="#/valintaryhma/{{data.oid}}"> {{data.nimi}}</a>
     </div>
     <ol data-valintaryhmaoid="{{data.oid}}">
-        <li ng-repeat="data in domain.getLapset(data) | orderBy:predicate" data-oid="{{data.oid}}"
+        <span ng-if="data.isVisible">
+            <li ng-repeat="data in data.alavalintaryhmat | orderBy:predicate "
+                data-oid="{{data.oid}}"
+                class="{{addClass('noNesting',domain.isHakukohde(data))}} {{addClass('uiExpanded',domain.isExpanded(data))}} {{addClass('uiCollapsed',domain.isCollapsed(data))}}"
+                ng-include="domain.getTemplate(data)">
+            </li>
+        </span>
+
+        <li ng-repeat="data in data.hakukohdeViitteet | orderBy:predicate"
+            data-oid="{{data.oid}}"
             class="{{addClass('noNesting',domain.isHakukohde(data))}} {{addClass('uiExpanded',domain.isExpanded(data))}} {{addClass('uiCollapsed',domain.isCollapsed(data))}}"
-            ng-include="domain.getTemplate(data)"></li>
+            ng-include="domain.getTemplate(data)">
+        </li>
     </ol>
 </script>
 <script type="text/ng-template" id="hakukohde_leaf.html">
@@ -36,28 +51,30 @@
 </div>
 <div class="tabsheets">
 
-    <!--
-    <h2>{{'valintaryhmatlistaus.header' | i18n}}</h2>
-    -->
-
-    <input id="osallistuu" type="checkbox" ng-model="domain.valmiitJaJulkaistut" ng-true-value="VALMIS JULKAISTU" ng-false-value=""/>
+    <input id="osallistuu" type="checkbox" ng-model="domain.search.valmiitJaJulkaistut" ng-true-value="VALMIS JULKAISTU" ng-false-value=""  ng-change="domain.refresh()"/>
     <label for="osallistuu">Vain valmiit ja julkaistut</label>
 
     <label for="haku">Haku</label>
-    <select id="haku" ng-model="model.hakuOid" ng-options="haku.nimi.kieli_fi for haku in hakuModel.haut | orderBy:'nimi.kieli_fi'"></select>
+    <select id="haku" ng-model="domain.search.haku" ng-options="haku.nimi.kieli_fi for haku in hakuModel.haut | orderBy:'nimi.kieli_fi'"  ng-change="domain.refresh()">
+        <option value=""></option>
+    </select>
 
     <label for="text">Hae</label>
-    <input id="text" ng-model="model.textSearch" >
+    <input id="text" ng-model="domain.search.q" ng-change="domain.sup()">
 
     <br />
 
     <a href="#/valintaryhma/root/lisaaSisaltyvaValintaryhma" class="button small">{{'valintaryhmatlistaus.add.valintaryhma' | i18n}}</a>
     <a href="#/lisaaHakukohde" class="button small">{{'valintaryhmatlistaus.add.hakukohde' | i18n}}</a>
 
-    <ol class="sortable treelist collapsible multiselect"
-        nestedsortable="">
-        <li ng-repeat="data in domain.getRootNode() | orderBy:predicate" data-oid="{{data.oid}}" ng-model="data"
+    <ol class="sortable treelist collapsible multiselect" nestedsortable="">
+        <li ng-repeat="data in domain.valintaperusteList | orderBy:predicate"
+            data-oid="{{data.oid}}"
+            ng-model="data"
             class="{{addClass('noNesting',domain.isHakukohde(data))}} {{addClass('uiExpanded',domain.isExpanded(data))}} {{addClass('uiCollapsed',domain.isCollapsed(data))}}"
-            ng-include="domain.getTemplate(data)"></li>
+            ng-include="domain.getTemplate(data)">
+        </li>
     </ol>
 </div>
+
+        {{ domain.valintaperusteList}}
