--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -25,6 +25,8 @@
     <script type="text/javascript" src="../js/valintaperusteet.js"></script>
     <script type="text/javascript" src="../js/valintaryhmaHakukohdeTree.js"></script>
     <script type="text/javascript" src="../js/valintaryhma.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavaModel.js"></script>
+    <script type="text/javascript" src="../js/hakijaryhma.js"></script>
     <script type="text/javascript" src="../js/hakukohde.js"></script>
     <script type="text/javascript" src="../js/hakukohdevalinnanvaihe.js"></script>
     <script type="text/javascript" src="../js/valintatapajono.js"></script>
