--- a/src/main/webapp/html/valintaryhmalomake.html
+++ b/src/main/webapp/html/valintaryhmalomake.html
@@ -222,6 +222,8 @@
                     <thead>
                     <tr>
                         <th>Nimi</th>
+                        <th>Laskentakaava</th>
+                        <th>Kiintiö</th>
                         <th>Periytyy</th>
                         <th>Poista</th>
                     </tr>
@@ -231,6 +233,8 @@
                         <td class="align-center">
                             <a href="#/valintaryhma/{{model.valintaryhma.oid}}/hakijaryhma/{{data.oid}}">{{data.nimi}}</a>
                         </td>
+                        <td class="align-center">{{data.laskentakaava_nimi}}</td>
+                        <td class="align-center">{{data.kiintio}}</td>
                         <td class="align-center">{{data.inheritance}}</td>
                         <td class="align-center">
                             <span ng-show="!data.inheritance" class="btn remove" ng-click="model.remove(data)"></span>
@@ -241,7 +245,7 @@
 
                 <div class="clear"></div>
 
-                <div ng-show="model.hakukohde.oid" class="form-row">
+                <div ng-show="model.valintaryhma.oid" class="form-row">
                     <span class="button small" ng-click="lisaaHakijaryhma()">Lisää Hakijaryhma</span>
                 </div>
             </div>
