--- a/src/main/webapp/html/valintatapajono.html
+++ b/src/main/webapp/html/valintatapajono.html
@@ -138,6 +138,7 @@
             <table ng-show="model.hakijaryhmat" class="virkailija-table-1 margin-bottom-2 width-60">
                 <thead>
                 <tr>
+                    <th>Liitetty</th>
                     <th>Nimi</th>
                     <th>Periytyy</th>
                     <th>Poista</th>
@@ -145,6 +146,7 @@
                 </thead>
                 <tbody ng-model="model.hakijaryhmat">
                 <tr ng-repeat="data in model.hakijaryhmat">
+                    <td>{{data.liitetty}}</td>
                     <td class="align-center">
                         <a href="#/hakukohde/{{hakukohdeOid}}/hakijaryhma/{{data.oid}}">{{data.nimi}}</a>
                     </td>
@@ -155,12 +157,6 @@
                 </tr>
                 </tbody>
             </table>
-
-            <div class="clear"></div>
-
-            <div ng-show="model.valintatapajono.oid" class="form-row">
-                <span class="button small" ng-click="lisaaHakijaryhma()">Liitä hakijaryhma</span>
-            </div>
         </div>
     </div>
 
