vt-14: hakijaryhman liitos, muokkaus ja poisto valintatapajonolle.

--- a/src/main/webapp/html/valintatapajono.html
+++ b/src/main/webapp/html/valintatapajono.html
@@ -156,7 +156,7 @@
                     <td class="align-center">{{data.hakijaryhma.kiintio}}</td>
                     <td class="align-center">{{data.inheritance}}</td>
                     <td class="align-center">
-                        <span ng-show="!data.inheritance" class="btn remove" ng-click="model.remove(data)"></span>
+                        <span ng-show="!data.inheritance" class="btn remove" ng-click="model.removeHakijaryhma(data.oid)"></span>
                     </td>
                 </tr>
                 </tbody>
