vt-14 angular 1.2. rc3 fix

--- a/src/main/webapp/html/hakijaryhma.html
+++ b/src/main/webapp/html/hakijaryhma.html
@@ -23,7 +23,7 @@
         <div class="clear"></div>
     </div>
     <div class="form-row">
-        <label class="form-row-label" for="kiintio">Kiintio</label>
+        <label class="form-row-label" for="kiintio">Kiintiö</label>
         <div class="form-row-content">
             <input type="number" min="0" required id="kiintio" ng-model="model.hakijaryhma.kiintio" />
         </div>
